--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "10.x"
+    "node": "14.17.6"
   },
   "dependencies": {
     "ejs": "^3.1.6",
