--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "14.17.6"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
